--- a/Vue/尚品汇项目学习笔记.md
+++ b/Vue/尚品汇项目学习笔记.md
@@ -642,7 +642,6 @@ cnpm i --save lodash
 
 ## 搜索模块中的三级联动与过渡动画
 
-
 1.1在home模块当中，使用了一个功能三级联动功能---->[typeNav]
 1.2在search模块当中，也使用三级联动的功能------->[typeNav]
 1.3注意的事项
@@ -951,3 +950,382 @@ cnpm i element-ui -S
 
 6)产品个数业务
 以后项目当中：凡是出现文本框【用户输入：一定有'幺蛾子',思考情况一定要多思考】
+
+
+
+## 加入购物车的业务?
+
+购物车项目第二个重要地方
+购物车：每一个人都有属于自己的购物车，那为什么不同用户登录自己账号，可以看见属于自己产品
+一定是用户点击加入购物车，把你的产品信息提交给服务器进行保存，当你下次在进入购物车的时候，
+需要向服务器发请求，获取你购物车里面的信息展示
+
+项目：点击加入购物车按钮的时候，以前经常进行路由跳转【调到另外一个路由】，
+但是你要注意，点击加入购物车这个按钮的时候，将用户选择产品，提交给服务器进行存储，如果服务器存储成功，
+之后在进行路由跳转
+
+
+
+```bash
+cnpm install uuid --save
+```
+
+
+
+获取购物车的数据进行展示?
+
+举例子:用户是淘宝平台的用户。
+为什么目前我们获取不到自己购物车的数据，你没有给我分配一个用户id
+张三:奶粉、鞋子、手机
+李四:羽绒服
+3.1问题1：用哪个技术可以生成用户id【身份】----uuid
+3.2问题2:用户身份如何给后台专递过去？
+3.3临时身份只需要执行一次
+3.4临时身份数据持家化的
+3.5工作的时候不这么玩
+会创建一个utils（工具）文件：把常用的代码片段放到这个文件夹里面
+3.6配置一些文件[JS]，不能操作仓库
+配置文件不限执行，没办法运行项目【配置文件很少碰仓库】
+
+
+
+设计购物车的数据？
+注意：获取购物车的数据的时候，读取的时候切记小心。后台写的数据格式有问题的。
+
+
+
+## 购物车数量的操作
+
+修改购物车产品数量的时候，需要发请求的，通知服务器产品最新的个数【服务器需要保存】，
+当你组件在获取购物车的数据时候，不就是最新的数值【用户刷新刷不掉】
+
+产品个数变化接口参数：
+skuID	string	Y	商品ID
+
+skuNum：在修改产品个数的时候,需要给服务器传递的是【变化的数值】
+
+
+
+## 登录注册
+
+对于企业当中，一般项目都有登录注册功能【这个业务很重要】
+当然有一些项目不需要注册，后台管理系统项目，一般不需要注册。
+
+4.1登录与注册的静态组件（图片问题会报错）
+
+4.2assets【放置静态资源文件的地方】
+一般放置所有组件共用的静态资源
+在样式当中也可以使用@,**在样式当中使用@，前面加上~**
+
+
+
+### 注册的业务
+
+4.3.1:今天在做注册、登录业务的时候，先不处理表单的验证功能，在项目最后一天，在把表单如何验证，如果是那哪些插件解决【最后去处理】
+正则
+手机号:11
+验证码:4-6
+登录密码|确认密码:首字母大写、包含英文、数字、特殊字符等等。
+
+获取验证码
+/api/user/passport/sendCode/{phone} 
+
+
+
+### 登录业务
+
+当你点击登录按钮的时候，需要把手机号、密码需要携带给服务器，服务器需要判断，你是不是我的用户【注册过的】
+如果是用户登录成功，进行登录，如果用户登录失败给一个提示即可。
+
+1.3token【令牌：字符串，服务器下发给用户的身份凭证】
+举例子:古代大战，兵符
+*******************************************************************************************
+
+
+
+一、用户登录以后获取用户信息进行展示
+
+企业项目:登录成功以后，服务器会返回token【存储于vuex当中】，如果想获取用户信息
+还需要再发请求【用户信息】，携带token给服务器。 
+api/user/passport/auth/getUserInfo 获取用户信息的接口
+
+
+
+1.1:为什么刷新页面，用户信息就消失
+用户刷新页面，用户信息消失没了获取不到，因为token没有携带给服务器。
+Vuex存储数据是否持持久化的?并非持久化
+1.2：本地存储持久化存储token
+
+
+
+为什么去别的模块【非home模块】获取用户信息失败？
+因为你去别的模块根本没有发请求获取用户信息，没办法展示用户信了
+
+怎么解决:
+每一个组件都在mounted里面发起获取用户信息，进行展示（可以太麻烦）
+残留的问题：用户在home模块刷新的时候，用户信息一直在展示（mounted执行的时候在向服务器发请求、获取用户信息展示）
+
+home->search[用户信息刷新数据就没了，因为在search模块当中根本没有发请求获取用户信息]
+search-detail[根本没有获取用户信息进行展示]
+
+
+
+二、退出登录
+2.1发请求，需要通知服务器，把现在用户身份token【销毁】
+2.2清除仓库数据+本地存储数据【都需要清理】
+
+用户已经登录了，用户想从home路由跳转到login路由，不应该这么操作了。
+现在用户登录以后，home路由不应该跳转到login路由当中【因为登陆了】，
+但是咱们以现在认知【技术】，没办法约束从home调到login
+
+导航守卫*****
+守卫条件判断*****
+
+导航:表示路由正在发生改变。
+守卫:古代的守门的士兵'守卫'，守卫可以通过条件判断路由能不能进行跳转。
+
+三大守卫:
+
+全局守卫：
+项目当中任何路由变化都可以检测到，通过条件判断可不可以进行路由跳转。
+前置守卫：路由跳转之前可以做一些事情。
+后置守卫：路由跳转已经完成在执行。
+//全局守卫:[后置守卫:在路由跳转完毕之后才会执行一次]
+router.afterEach(()=>{
+     console.log('守卫:路由跳转完毕才会执行一次')
+})
+
+
+
+4.1用户已经登录了，不应该在访问login？【通过什么条件能判断用户登录、未登录】
+路由独享守卫：
+针对某一个路由的守卫
+
+组件内守卫：
+也是负责某一个路由守卫
+
+
+
+5)身份凭证?
+以后登录：
+TOKEN身份为大
+5.1UUID生成的临时省份
+5.2用户（注册与登录）token【正式身份】
+
+
+
+
+
+## 交易业务
+
+前面课程当中可能自己已经注册了一个账号【18666666661】，今天在做支付的时候，统一使用
+账号:13700000000
+密码:111111
+
+1.1获取用户地址信息、获取用户购物车清单信息
+//用户地址信息
+/api/user/userAddress/auth/findUserAddressList
+//商品清单接口
+/api/order/auth/trade
+
+
+
+1.2Vuex的action发请求，但是从今天开始，咱们要练习不用Vuex改如何开发？
+请求配置,类似$bus使用
+
+
+
+
+
+2)展示商品清单数据
+
+
+
+
+
+3)提交订单业务
+
+当用户点击提交订单按钮的时候，需要发请求的
+提交订单的请求地址:/api/order/auth/submitOrder?tradeNo={tradeNo}
+
+前台：需要告诉服务器：谁买的、买的啥、买几个、 支付多少钱、留言信息...
+后台：订单号，这笔交易的一个标识符【支付的】
+
+axios({url:'xxx',methods:'post',data:{a:1}})
+
+3.1微信支付、支付宝支付等等
+交易编码（服务器：字符串hash）
+收件人名字
+收件人手机号
+收件的地址
+买家留言信息
+支付产品
+
+
+
+4)获取支付信息进行展示
+
+
+
+element-ui官方UI组件库（插件）？
+
+react框架:
+UI组件库antd【蚂蚁金服旗下PC端UI组件库】
+antd-mobile【蚂蚁金服旗下的移动端UI组件库】
+
+Vue框架:
+element-UI【饿了吗旗下的UI组件库，官方承认的PC组件库插件】
+vant【Vue官方提供移动端UI组件库】
+
+
+
+官网地址:https://element.eleme.cn/#/zh-CN
+官网地址：https://youzan.github.io/vant/#/zh-CN/
+
+第一步：项目中安装element-ui组件库 [2.15.6版本：Vue2]
+
+```bash
+cnpm i element-ui@2.15.6 --save
+```
+
+第二步：在入口文件引入elementUI组件库
+第一种：全部引入【不采用：因为项目中只是用到一个组件，没必要全都引入进来】
+第二种：按需引入【按照开发需求引入相应的组件，并非全部组件引入】
+
+
+第三步：按需引入，安装相应的插件
+cnpm install babel-plugin-component -D
+文档中说的.babelrc文件，即为babel.config.js文件
+修改完babel.config.js配置文件以后，项目重启
+
+
+第四部：按照需求引入相应的组件即可
+
+Vue.component();
+Vue.prototype.$xxx = xxx;
+
+
+
+6)支付业务【微信支付】
+
+```bash
+$ cnpm i qrcode --save
+
+```
+
+ this.$alert('<strong>这是 <i>HTML</i> 片段</strong>', 'HTML 片段', {dangerouslyUseHTMLString: true});
+6.1今晚稍微把elementUI的组件都稍微看看。
+6.2使用messageBox显示弹框
+6.3展示二维码----qrcode插件
+通过qrCode.toDataUrl方法，将字符串转换为加密的在线二维码链接，通过图片进行展示。
+moment.js
+swiper.js
+nprogress.js
+qrcode.js
+
+
+
+GET|POST：短轮询，请求发一次，服务器响应一次，完事。
+
+第一种做法:前端开启定时器，一直找服务器要用户支付信息【定时器】
+
+第二种做法:项目务必要上线 + 和后台紧密配合
+当用户支付成功以后，需要后台重定向到项目某一个路由中，将支付情况通过URL参数形式传给前端，
+前端获取到服务器返回的参数，就可以判断了。
+
+
+
+## 个人中心路由搭建
+
+1.1当年学习路由的时候:一级路由、二级路由、三级路由 【二级路由搭建】
+1.2完成个人中心数据的展示【分页】
+
+
+
+
+2)未登录全局守卫的判断
+
+在前面课程当中:导航守卫【导航:路由发生变化，守卫可以检测到，通过判断，确定这次路由跳转】
+
+前置守卫：在路由跳转之前，进行判断
+后置守卫:路由都已经跳转完毕才执行。
+
+
+未登录的情况:
+全局守卫:只要的项目当中任何某一个路由发生变化，就会出发。
+项目守卫使用:一般有用前置全局守卫
+
+用户登录:
+
+用户未登录：点击购物车的结算按钮->交易页面【没有登录:去不了】
+           未登录不能调到支付页面
+           未登录不能调到支付成功页面
+           未登录不能去个人中心【都不知道你是谁：展示谁的个人中心啊】
+
+
+
+
+3)路由独享守卫
+路由独享守卫：需要在配置路由的地方使用
+导航守卫:全局守卫->项目当中有任何路由变化【a->b,b->d】触发。
+        路由独享守卫：专门负责某一个路由
+
+用户登陆了:
+去交易页面:从购物车才能跳转到交易页面。
+
+next():你本来想去哪里，我就放行，你就去完事了。
+
+next('/login'):执行守卫放行到执行的路由。
+
+next(false):路由跳转的时候，从哪里来回那里去。
+
+
+
+4)组件内守卫---->一般很少用【全局 + 路由独享守卫】
+组件内守卫：也是专门负责某一个路由【并非负责全部路由】，写法和路由独享守卫有区别？
+组件内守卫需要书写在组件内部
+
+beforeRouteEnter
+beforeRouteUpdate (2.2 新增)
+beforeRouteLeave
+
+
+
+6)路由懒加载
+面试【高频的面试】:项目的性能优化手段有哪些？
+v-if|v-show:尽可能采用v-show
+按需引入【lodash、elementUI】
+防抖与节流
+路由懒加载：当用户访问的时候，加载对应组件进行展示。
+
+
+
+7)图片懒加载
+vue-lazyload:图片懒加载
+图片：比用用户网络不好，服务器的数据没有回来，
+总不可能让用户看白色，至少有一个默认图片在展示。
+
+
+
+
+
+
+8)表单验证【后台管理系统：大量使用elementUI】
+以后工作的时候经常会进行表单验证【element-ui】进行表单验证，so 简单。
+项目当中表单验证功能比较常见的。
+
+8.1vee-validate插件：Vue官方提供的一个表单验证的插件【老师接下来的操作能大概看懂即可】
+这个插件很难用：如果你翻看它的文档（看一个月：不保证能看懂），依赖文件很多（文档书写的很难理解）
+花大量时间学习，很难搞懂。
+
+
+8.2哪怕将来工作了，真的使用vee-valadiate【老师项目搞出来：改老师代码即可】
+
+使用步骤：
+1：安装vee-valadite，别安装最新版本@2
+2：在plugins文件夹中创建一个validate.js[专门注册vee-valadite]
+3:注册插件
+4：注册插件的时候，用中文，以及需要验证的字段【用中文显示提示形式】
+5：在入口文件需要引入执行一次
+6:使用vee-valadiate插件
+
