--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -14206,6 +14206,52 @@ Dijkstra **算法**
 
 ----
 
+## 676. 实现一个魔法字典
+
+设计一个使用单词列表进行初始化的数据结构，单词列表中的单词 互不相同 。 如果给出一个单词，请判定能否只将这个单词中一个字母换成另一个字母，使得所形成的新单词存在于你构建的字典中。
+
+实现 MagicDictionary 类：
+
+MagicDictionary() 初始化对象
+void buildDict(String[] dictionary) 使用字符串数组 dictionary 设定该数据结构，dictionary 中的字符串互不相同
+bool search(String searchWord) 给定一个字符串 searchWord ，判定能否只将字符串中 一个 字母换成另一个字母，使得所形成的新字符串能够与字典中的任一字符串匹配。如果可以，返回 true ；否则，返回 false 。
+
+```js
+var MagicDictionary = function() {
+
+};
+
+MagicDictionary.prototype.buildDict = function(dictionary) {
+    this.words = dictionary;
+};
+
+MagicDictionary.prototype.search = function(searchWord) {
+    for (const word of this.words) {
+        if (word.length !== searchWord.length) {
+            continue;
+        }
+
+        let diff = 0;
+        for (let i = 0; i < word.length; ++i) {
+            if (word[i] !== searchWord[i]) {
+                ++diff;
+                if (diff > 1) {
+                    break;
+                }
+            }
+        }
+        if (diff === 1) {
+            return true;
+        }
+    }
+    return false;
+};
+```
+
+
+
+----
+
 ## 682. 棒球比赛
 
 你现在是一场采用特殊赛制棒球比赛的记录员。这场比赛由若干回合组成，过去几回合的得分可能会影响以后几回合的得分。
@@ -15141,6 +15187,88 @@ MyCalendarThree.prototype.update = function(start, end, l, r, idx) {
     }
 }
 
+```
+
+
+
+---
+
+## 741. 摘樱桃
+
+一个N x N的网格(grid) 代表了一块樱桃地，每个格子由以下三种数字的一种来表示：
+
+0 表示这个格子是空的，所以你可以穿过它。
+1 表示这个格子里装着一个樱桃，你可以摘到樱桃然后穿过它。
+-1 表示这个格子里有荆棘，挡着你的路。
+你的任务是在遵守下列规则的情况下，尽可能的摘到最多樱桃：
+
+从位置 (0, 0) 出发，最后到达 (N-1, N-1) ，只能向下或向右走，并且只能穿越有效的格子（即只可以穿过值为0或者1的格子）；
+当到达 (N-1, N-1) 后，你要继续走，直到返回到 (0, 0) ，只能向上或向左走，并且只能穿越有效的格子；
+当你经过一个格子且这个格子包含一个樱桃时，你将摘到樱桃并且这个格子会变成空的（值变为0）；
+如果在 (0, 0) 和 (N-1, N-1) 之间不存在一条可经过的路径，则没有任何一个樱桃能被摘到。
+示例 1:
+
+```
+输入: grid =
+[[0, 1, -1],
+ [1, 0, -1],
+ [1, 1,  1]]
+输出: 5
+解释： 
+玩家从（0,0）点出发，经过了向下走，向下走，向右走，向右走，到达了点(2, 2)。
+在这趟单程中，总共摘到了4颗樱桃，矩阵变成了[[0,1,-1],[0,0,-1],[0,0,0]]。
+接着，这名玩家向左走，向上走，向上走，向左走，返回了起始点，又摘到了1颗樱桃。
+在旅程中，总共摘到了5颗樱桃，这是可以摘到的最大值了。
+```
+
+说明:
+
+grid 是一个 N * N 的二维数组，N的取值范围是1 <= N <= 50。
+每一个 grid[i][j] 都是集合 {-1, 0, 1}其中的一个数。
+可以保证起点 grid[0][0] 和终点 grid[N-1][N-1] 的值都不会是 -1。
+
+```
+var cherryPickup = function(grid) {
+    const n = grid.length;
+    const f = new Array(n * 2 - 1).fill(0).map(() => new Array(n).fill(0).map(() => new Array(n).fill(-Number.MAX_VALUE)));
+    f[0][0][0] = grid[0][0];
+    for (let k = 1; k < n * 2 - 1; ++k) {
+        for (let x1 = Math.max(k - n + 1, 0); x1 <= Math.min(k, n - 1); ++x1) {
+            const y1 = k - x1;
+            if (grid[x1][y1] === -1) {
+                continue;
+            }
+            for (let x2 = x1; x2 <= Math.min(k, n - 1); ++x2) {
+                let y2 = k - x2;
+                if (grid[x2][y2] === -1) {
+                    continue;
+                }
+                let res = f[k - 1][x1][x2]; // 都往右
+                if (x1 > 0) {
+                    res = Math.max(res, f[k - 1][x1 - 1][x2]); // 往下，往右
+                }
+                if (x2 > 0) {
+                    res = Math.max(res, f[k - 1][x1][x2 - 1]); // 往右，往下
+                }
+                if (x1 > 0 && x2 > 0) {
+                    res = Math.max(res, f[k - 1][x1 - 1][x2 - 1]); // 都往下
+                }
+                res += grid[x1][y1];
+                if (x2 !== x1) { // 避免重复摘同一个樱桃
+                    res += grid[x2][y2];
+                }
+                f[k][x1][x2] = res;
+            }
+        }
+    }
+    return Math.max(f[n * 2 - 2][n - 1][n - 1], 0);
+};
+
+let grid =
+    [[0, 1, -1],
+     [1, 0, -1],
+     [1, 1,  1]];
+console.log(cherryPickup(grid));
 ```
 
 
@@ -16267,6 +16395,57 @@ class Solution:
         return ans
 
 
+```
+
+
+
+----
+
+## 873. 最长的斐波那契子序列的长度
+
+如果序列 X_1, X_2, ..., X_n 满足下列条件，就说它是 斐波那契式 的：
+
+n >= 3
+对于所有 i + 2 <= n，都有 X_i + X_{i+1} = X_{i+2}
+给定一个严格递增的正整数数组形成序列 arr ，找到 arr 中最长的斐波那契式的子序列的长度。如果一个不存在，返回  0 。
+
+（回想一下，子序列是从原序列 arr 中派生出来的，它从 arr 中删掉任意数量的元素（也可以不删），而不改变其余元素的顺序。例如， [3, 5, 8] 是 [3, 4, 5, 6, 7, 8] 的一个子序列）
+
+提示：
+
+3 <= arr.length <= 1000
+1 <= arr[i] < arr[i + 1] <= 10^9
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number}
+ */
+var lenLongestFibSubseq = function(arr) {
+    const indices = new Map();
+    const n = arr.length;
+    for (let i = 0; i < n; i++) {
+        indices.set(arr[i], i);
+    }
+    const dp = new Array(n).fill(0).map(() => new Array(n).fill(0));
+    let ans = 0;
+    for (let i = 0; i < n; i++) {
+        for (let j = n - 1; j >= 0; j--) {
+            if (arr[j] * 2 <= arr[i]) {
+                break;
+            }
+            if (indices.has(arr[i] - arr[j])) {
+                const k = indices.get(arr[i] - arr[j]);
+                dp[j][i] = Math.max(dp[k][j] + 1, 3);
+                ans = Math.max(ans, dp[j][i]);
+            }
+        }
+    }
+    return ans;
+};
+
+let arr = [1,2,3,4,5,6,7,8];
+console.log(lenLongestFibSubseq(arr));
 ```
 
 
@@ -18413,6 +18592,46 @@ console.log(result);
 
 
 ---
+## 1252. 奇数值单元格的数目
+
+给你一个 m x n 的矩阵，最开始的时候，每个单元格中的值都是 0。
+
+另有一个二维索引数组 indices，indices[i] = [ri, ci] 指向矩阵中的某个位置，其中 ri 和 ci 分别表示指定的行和列（从 0 开始编号）。
+
+对 indices[i] 所指向的每个位置，应同时执行下述增量操作：
+
+ri 行上的所有单元格，加 1 。
+ci 列上的所有单元格，加 1 。
+给你 m、n 和 indices 。请你在执行完所有 indices 指定的增量操作后，返回矩阵中 奇数值单元格 的数目。
+
+```js
+var oddCells = function(m, n, indices) {
+    const rows = new Array(m).fill(0);
+    const cols = new Array(n).fill(0);
+    for (const index of indices) {
+        rows[index[0]]++;
+        cols[index[1]]++;
+    }
+    let oddx = 0, oddy = 0;
+    for (let i = 0; i < m; i++) {
+        if ((rows[i] & 1) !== 0) {
+            oddx++;
+        }
+    }
+    for (let i = 0; i < n; i++) {
+        if ((cols[i] & 1) !== 0) {
+            oddy++;
+        }
+    }
+    return oddx * (n - oddy) + (m - oddx) * oddy;
+};
+
+```
+
+
+
+----
+
 ## 1299. 将每个元素替换为右侧最大元素
 
 给你一个数组 arr ，请你将每个元素用它右边最大的元素替换，如果是最后一个元素，用 -1 替换。
