--- a/HTTP/浏览器.md
+++ b/HTTP/浏览器.md
@@ -309,7 +309,7 @@ Service workers也可以用来做这些事情：
 
 ### **地址解析：**
 
-首先判断你输入的是一个合法的 URL 还是一个待搜索的关键词，并且**根据你输入的内容进行自动完成、字符编码等操作**。
+首先判断你输入的是一个**合法的 URL** 还是一个**待搜索的关键词**，并且**根据你输入的内容进行自动完成、字符编码等操作**。
 
 ### **HSTS**
 
@@ -345,8 +345,8 @@ Service workers也可以用来做这些事情：
 - 当浏览器的强缓存失效的时候或者请求头中设置了不走强缓存，并且在请求头中设置了If-Modified-Since 或者 If-None-Match 的时候，会将这两个属性值到服务端去验证是否命中协商缓存，如果命中了协商缓存，会返回 304 状态，加载浏览器缓存，并且响应头会设置 Last-Modified 或者 ETag 属性。
 - 对比缓存在请求数上和没有缓存是一致的，但如果是 304 的话，返回的仅仅是一个状态码而已，并没有实际的文件内容，因此 在响应体体积上的节省是它的优化点。
 - 协商缓存有 2 组字段(不是两个)，控制协商缓存的字段有：Last-Modified/If-Modified-since（http1.0）和Etag/If-None-match（http1.1）
-- Last-Modified/If-Modified-since表示的是服务器的资源最后一次修改的时间；Etag/If-None-match表示的是服务器资源的唯一标
-  识，只要资源变化，Etag就会重新生成。
+- Last-Modified/If-Modified-since表示的是服务器的**资源最后一次修改的时间**；Etag/If-None-match表示的是**服务器资源的唯一标**
+  **识**，只要资源变化，Etag就会重新生成。
 - Etag/If-None-match的优先级比Last-Modified/If-Modified-since高。
 
 
