--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -15189,6 +15189,47 @@ MyCalendarThree.prototype.update = function(start, end, l, r, idx) {
 
 ```
 
+----
+
+## 735. 行星碰撞
+
+给定一个整数数组 asteroids，表示在同一行的行星。
+
+对于数组中的每一个元素，其绝对值表示行星的大小，正负表示行星的移动方向（正表示向右移动，负表示向左移动）。每一颗行星以相同的速度移动。
+
+找出碰撞后剩下的所有行星。碰撞规则：两个行星相互碰撞，较小的行星会爆炸。如果两颗行星大小相同，则两颗行星都会爆炸。两颗移动方向相同的行星，永远不会发生碰撞。
+
+```js
+/**
+ * @param {number[]} asteroids
+ * @return {number[]}
+ */
+var asteroidCollision = function(asteroids) {
+    const stack = [];
+    for (const aster of asteroids) {
+        let alive = true;
+        while (alive && aster < 0 && stack.length > 0 && stack[stack.length - 1] > 0) {
+            alive = stack[stack.length - 1] < -aster;  // aster是否存在
+            if (stack[stack.length - 1] <= -aster) {  //栈顶行星爆炸
+                stack.pop();
+            }
+        }
+        if (alive) {
+            stack.push(aster);
+        }
+    }
+    const size = stack.length;
+    const ans = new Array(size).fill(0);
+    for (let i = size - 1; i >= 0; i--) {
+        ans[i] = stack.pop();
+    }
+    return ans;
+};
+
+let asteroids = [5,10,-5];
+console.log(asteroidCollision(asteroids));
+```
+
 
 
 ---
