--- a/面试学习题目/前端面试_9_计算机网络部分.md
+++ b/面试学习题目/前端面试_9_计算机网络部分.md
@@ -684,7 +684,7 @@ http请求方式有以下9种，其中get和post是最常用的：
 
 OPTIONS是除了GET和POST之外的其中一种 HTTP请求方法。
 
-OPTIONS方法是用于请求获得由`Request-URI`标识的资源在请求/响应的通信过程中可以使用的功能选项。通过这个方法，客户端可以**在采取具体资源请求之前，决定对该资源采取何种必要措施，或者了解服务器的性能**。该请求方法的响应不能缓存。
+OPTIONS方法是用于请求获得由`Request-URI`标识的资源在请求/响应的通信过程中可以使用的功能选项。通过这个方法，客户端可以**在采取具体资源请求之前，决定对该资源采取何种必要措施，或者了解服务器的性能**。该请求方法的响应**不能缓存**。
 
 OPTIONS请求方法的**主要用途**有两个：
 
@@ -957,7 +957,7 @@ ARP是**地址解析协议**，其工作原理为：
 
 ## 21. 常见http status
 
-**1XX系列**：指定客户端应相应的某些动作，**代表请求已被接受，需要继续处理**。由于 HTTP/1.0 协议中没有定义任何 1xx 状态码，所以除非在某些试验条件下，服务器禁止向此类客户端发送 1xx 响应。
+**1XX系列**：指定客户端应响应的某些动作，**代表请求已被接受，需要继续处理**。由于 HTTP/1.0 协议中没有定义任何 1xx 状态码，所以除非在某些试验条件下，服务器禁止向此类客户端发送 1xx 响应。
 
 **2XX系列**：代表**请求已成功被服务器接收、理解、并接受**。这系列中最常见的有200、201状态码。
 
@@ -1516,8 +1516,8 @@ Expires **设置时间点**
 4. 参数类型：post 的参数传递支持更多的数据类型。
 5. get是明文传输，post是放在请求体中，**但是开发者可以通过抓包工具看到，也相当于是明文的。**
 6. 安全性：Get 请求可以将请求的参数放入 url 中向服务器发送，这样的做法相对于 Post 请求来说，一个方面是不太安全，因为请求的 url 会被保留在历史记录中。**get请求会保存在浏览器历史记录中**，还可能保存在web服务器的日志中
-7. 应用场景：GET 请求是一个**幂等**的请求，一般 Get 请求用于对服务器资源不会产生影响的场景，比如说请求一个网页。而 Post **不是一个幂等**的请求，一般用于对服务器资源会产生影响的情景。比如注册用户这一类的操作。
-8. 是否缓存：因为不同的应用场景，所以浏览器一般会对 Get 请求缓存，但很少对 Post 请求缓存。
+7. 应用场景：GET 请求是一个**幂等**的请求，一般 Get 请求用于对服务器资源不会产生影响的场景，比如说**请求一个网页**。而 Post **不是一个幂等**的请求，一般用于对服务器资源会产生影响的情景。比如**注册用户**这一类的操作。
+8. 是否缓存：因为不同的应用场景，所以浏览器**一般会对 Get 请求缓存**，但很少对 Post 请求缓存。
 9. 发送的报文格式：Get 请求的报文中实体部分为空，Post 请求的报文中实体部分一般为向服务器发送的数据。
 
 **关于缓存**
@@ -1529,7 +1529,7 @@ Expires **设置时间点**
  **get 请求是否限制了传参长度？**
 
 - HTTP 协议未规定 GET 和 POST 的长度限制
-- GET 的最大长度显示是因为浏览器和 web 服务器限制了 URI 的长度
+- **GET 的最大长度显示是因为浏览器和 web 服务器限制了 URI 的长度**
 - 不同的浏览器和 WEB 服务器，限制的最大长度不一样
 - 要支持 IE，则最大长度为 2083byte，若只支持 Chrome，则最大长度 8182byte
 
@@ -1842,7 +1842,7 @@ hosts 文件是个没有扩展名的系统文件，其作用就是**将网址域
 **8.Cache-Control**
 
 - **Cache-Control:private** 默认为private 响应只能够作为私有的缓存，不能再用户间共享
-- **`Cache-Control:public `**响应会被缓存，并且在多用户间共享。正常情况, 如果要求HTTP认证,响应会自动设置为 private.
+- **`Cache-Control:public `**响应会被缓存，并且在多用户间共享。正常情况, 如果要求HTTP认证,**响应会自动设置为 private.**
 - **Cache-Control:must-revalidate** 响应在特定条件下会被重用，以满足接下来的请求，但是它必须到服务器端去验证它是不是仍然是最新的。
 - **Cache-Control:no-cache** 响应不会被缓存,而是实时向服务器端请求资源。
 - **Cache-Control:max-age=10** 设置缓存最大的有效时间，**但是这个参数定义的是时间大小**（比如：60）而不是确定的时间点。单位是[秒 seconds]。
@@ -3073,7 +3073,7 @@ OSS具有与平台无关的RESTful API接口，您可以在任何应用、任何
 1. 同一个客户端可以使用这个长连接处理其他请求，避免`HTTP`重新连接和断开所消耗的时间；
 2. 服务器可以利用这个连接 **主动推送** 消息到客户端（重要的）。
 
-`HTTP`头部有`了Connection: Keep-Alive`这个值，代表客户端期望这次请求是长连接的。但是并不代表一定会使用长连接，服务器端都可以无视这个值，也就是不按标准来。**实现长连接要客户端和服务端都支持长连接。**
+`HTTP`头部有`了Connection: Keep-Alive`这个值，**代表客户端期望这次请求是长连接的。但是并不代表一定会使用长连接**，服务器端都可以无视这个值，也就是不按标准来。**实现长连接要客户端和服务端都支持长连接。**
 `keep-alive`的优点：
 
 - 较少的`CPU`和内存的使用（由于同时打开的连接的减少了）
