--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -12749,6 +12749,50 @@ console.log(result);
 
 ---
 
+## 558. 四叉树交集
+
+二进制矩阵中的所有元素不是 0 就是 1 。
+
+给你两个四叉树，quadTree1 和 quadTree2。其中 quadTree1 表示一个 n * n 二进制矩阵，而 quadTree2 表示另一个 n * n 二进制矩阵。
+
+请你返回一个表示 n * n 二进制矩阵的四叉树，它是 quadTree1 和 quadTree2 所表示的两个二进制矩阵进行 按位逻辑或运算 的结果。
+
+注意，当 isLeaf 为 False 时，你可以把 True 或者 False 赋值给节点，两种值都会被判题机制 接受 。
+
+四叉树数据结构中，每个内部节点只有四个子节点。此外，每个节点都有两个属性：
+
+val：储存叶子结点所代表的区域的值。1 对应 True，0 对应 False；
+isLeaf: 当这个节点是一个叶子结点时为 True，如果它有 4 个子节点则为 False 。
+
+
+
+```js
+var intersect = function(quadTree1, quadTree2) {
+    if (quadTree1.isLeaf) {
+        if (quadTree1.val) {
+            return new Node(true, true);
+        }
+        return new Node(quadTree2.val, quadTree2.isLeaf, quadTree2.topLeft, quadTree2.topRight, quadTree2.bottomLeft, quadTree2.bottomRight);
+    }
+    if (quadTree2.isLeaf) {
+        return intersect(quadTree2, quadTree1);
+    }
+    const o1 = intersect(quadTree1.topLeft, quadTree2.topLeft);
+    const o2 = intersect(quadTree1.topRight, quadTree2.topRight);
+    const o3 = intersect(quadTree1.bottomLeft, quadTree2.bottomLeft);
+    const o4 = intersect(quadTree1.bottomRight, quadTree2.bottomRight);
+    if (o1.isLeaf && o2.isLeaf && o3.isLeaf && o4.isLeaf && o1.val === o2.val && o1.val === o3.val && o1.val === o4.val) {
+        return new Node(o1.val, true);
+    }
+    return new Node(false, false, o1, o2, o3, o4);
+};
+
+```
+
+
+
+---
+
 ## 559. N 叉树的最大深度
 
 给定一个 N 叉树，找到其最大深度。
@@ -15361,6 +15405,41 @@ var nextGreatestLetter = function(letters, target) {
 let letters = ["c", "f", "j"],target = "c";
 let result=nextGreatestLetter(letters,target);
 console.log(result);
+```
+
+---
+
+## 745. 前缀和后缀搜索
+
+设计一个包含一些单词的特殊词典，并能够通过前缀和后缀来检索单词。
+
+实现 WordFilter 类：
+
+WordFilter(string[] words) 使用词典中的单词 words 初始化对象。
+f(string pref, string suff) 返回词典中具有前缀 prefix 和后缀 suff 的单词的下标。如果存在不止一个满足要求的下标，返回其中 最大的下标 。如果不存在这样的单词，返回 -1 。
+
+```
+var WordFilter = function(words) {
+    this.dictionary = new Map();
+    for (let i = 0; i < words.length; i++) {
+        const word = words[i];
+        const m = word.length;
+        for (let prefixLength = 1; prefixLength <= m; prefixLength++) {
+            for (let suffixLength = 1; suffixLength <= m; suffixLength++) {
+                this.dictionary.set(word.substring(0, prefixLength) + "#" + word.substring(m - suffixLength), i);
+            }
+        }
+    }
+};
+
+WordFilter.prototype.f = function(pref, suff) {
+    if (this.dictionary.has(pref + "#" + suff)) {
+        return this.dictionary.get(pref + "#" + suff);
+    }
+    return -1;
+};
+
+
 ```
 
 
