--- a/面试学习题目/前端面试_19_数据结构部分.md
+++ b/面试学习题目/前端面试_19_数据结构部分.md
@@ -55,3 +55,35 @@
 - 图：表示物件与物件之间的关系，图论的基本研究对象。
 - 堆：是计算机科学中一种特别的树状数据结构，也是一种特殊的二叉树。
 - 散列表：根据键（key）直接访问内存存储位置的一种数据结构，通过计算一个关于键值的函数，将所需查询的数据映射到表中的一个位置来访问记录，映射函数叫做散列函数，存放记录的数组叫散列表（散列函数和哈希冲突是实现散列表最重要的两个环节）。
+
+
+
+----
+
+## 计算π
+
+计算公式 
+
+ ![img](E:\pogject\学习笔记\image\js\f5efbf034e38294d2624c054e1920e3e75a.png)
+
+方法讲解
+
+　　所用公式等式右边分子都为 1，分母为递增数列，从第一项开始，奇数项符号为正，偶数项符号为负。等式右边的分母越大，越小，圆周率 π 计算的值越精确；换个角度讲，就是等式右边的项越多，计算的值越精确。
+
+```js
+function countPI(n) {
+    let pi = 0;
+    for (let i = 1; i <= n; i++) {
+        if (i % 2 === 0) {
+            pi -= 1/(i * 2 - 1)
+        } else {
+            pi += 1/(i * 2 - 1)
+        }
+    }
+    return pi * 4;
+}
+
+let PI = countPI(100000);
+console.log(PI);
+```
+
