--- a/面试学习题目/前端面试面经题目.md
+++ b/面试学习题目/前端面试面经题目.md
@@ -1,6 +1,6 @@
 -----
 
-## 字节暑期实习前端一面   4.26
+##    4.26
 
 1.自我介绍
 
@@ -707,7 +707,7 @@ var repeatFunc=repeat(console.log,4,3000);
 
 ----
 
-## 美团暑期实习  5.10
+##   5.10
 
 http的方法  option的作用
 
@@ -757,7 +757,7 @@ class 静态方法
 
 ---
 
-## pdd面试  06.02
+## 06.02
 
 项目介绍，难点
 
@@ -771,7 +771,7 @@ Vue数据双向绑定原理
 
 ---
 
-## Momenta前端  6.07
+## 前端  6.07
 
 js数据类型
 
@@ -848,7 +848,7 @@ css三列布局
 
 ----
 
-## tp-link提前批一面  6.21
+## 提前批一面  6.21
 
 http长连接和短连接
 
@@ -894,7 +894,7 @@ var deleteMiddle = function(head) {
 
 
 
-## tp-link提前批二面  6.23
+## 提前批二面  6.23
 
 排序算法稳定性
 
@@ -910,7 +910,7 @@ git merge 和 git rebase的区别
 
 ---
 
-## 帆软
+## 前端7.1
 
 30分钟
 
