--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -15938,6 +15938,42 @@ const cross = (p, q, r) => {
 
 
 
+----
+
+## 814. 二叉树剪枝
+
+给你二叉树的根结点 root ，此外树的每个结点的值要么是 0 ，要么是 1 。
+
+返回移除了所有不包含 1 的子树的原二叉树。
+
+节点 node 的子树为 node 本身加上所有 node 的后代。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {TreeNode}
+ */
+var pruneTree = function(root) {
+    if (!root) {
+        return null;
+    }
+    root.left = pruneTree(root.left);
+    root.right = pruneTree(root.right);
+    if (!root.left && !root.right && root.val === 0) {
+        return null;
+    }
+    return root;
+};
+```
+
 
 
 ---
