--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18464,6 +18464,42 @@ const isPrime = (n) => {
 }
 ```
 
+----
+
+## 1184. 公交站间的距离
+
+环形公交路线上有 n 个站，按次序从 0 到 n - 1 进行编号。我们已知每一对相邻公交站之间的距离，distance[i] 表示编号为 i 的车站和编号为 (i + 1) % n 的车站之间的距离。
+
+环线上的公交车都可以按顺时针和逆时针的方向行驶。
+
+返回乘客从出发点 start 到目的地 destination 之间的最短距离。
+
+```js
+/**
+ * @param {number[]} distance
+ * @param {number} start
+ * @param {number} destination
+ * @return {number}
+ */
+var distanceBetweenBusStops = function(distance, start, destination) {
+    if (start > destination) {
+        [start, destination] = [destination, start]
+    }
+    let sum1 = 0, sum2 = 0;
+    for (let i = 0; i < distance.length; i++) {
+        if (i >= start && i < destination) {
+            sum1 += distance[i];
+        } else {
+            sum2 += distance[i];
+        }
+    }
+    return Math.min(sum1, sum2);
+};
+
+let distance = [1,2,3,4], start = 0, destination = 1;
+console.log(distanceBetweenBusStops(distance, start, destination));
+```
+
 
 
 
