--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -16952,6 +16952,88 @@ console.log(result);
 
 ---
 
+## 919. 完全二叉树插入器
+
+完全二叉树 是每一层（除最后一层外）都是完全填充（即，节点数达到最大）的，并且所有的节点都尽可能地集中在左侧。
+
+设计一种算法，将一个新节点插入到一个完整的二叉树中，并在插入后保持其完整。
+
+实现 CBTInserter 类:
+
+CBTInserter(TreeNode root) 使用头节点为 root 的给定树初始化该数据结构；
+CBTInserter.insert(int v)  向树中插入一个值为 Node.val == val的新节点 TreeNode。使树保持完全二叉树的状态，并返回插入节点 TreeNode 的父节点的值；
+CBTInserter.get_root() 将返回树的头节点。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ */
+var CBTInserter = function(root) {
+    this.candidate = [];
+    this.root = root;
+
+    const queue = [];
+    queue.push(root);
+
+    while (queue.length) {
+        const node = queue.shift();
+        if (node.left) {
+            queue.push(node.left);
+        }
+        if (node.right) {
+            queue.push(node.right);
+        }
+        if (!(node.left && node.right)) {
+            this.candidate.push(node);
+        }
+    }
+};
+
+/** 
+ * @param {number} val
+ * @return {number}
+ */
+CBTInserter.prototype.insert = function(val) {
+    const child = new TreeNode(val);
+    const node = this.candidate[0];
+    let ret = node.val;
+    if (!node.left) {
+        node.left = child;
+    } else {
+        node.right = child;
+        this.candidate.shift();
+    }
+    this.candidate.push(child);
+    return ret;
+};
+
+/**
+ * @return {TreeNode}
+ */
+CBTInserter.prototype.get_root = function() {
+    return this.root;
+};
+
+/**
+ * Your CBTInserter object will be instantiated and called as such:
+ * var obj = new CBTInserter(root)
+ * var param_1 = obj.insert(val)
+ * var param_2 = obj.get_root()
+ */
+```
+
+
+
+----
+
 ## 926. 将字符串翻转到单调递增
 
 如果一个二进制字符串，是以一些 0（可能没有 0）后面跟着一些 1（也可能没有 1）的形式组成的，那么该字符串是 单调递增 的。
