--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2633,6 +2633,60 @@ console.log(result);
 
 
 ---
+## 42. 接雨水
+
+给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+
+![img](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/10/22/rainwatertrap.png)
+
+输入：height = [0,1,0,2,1,0,1,3,2,1,2,1]
+输出：6
+解释：上面是由数组 [0,1,0,2,1,0,1,3,2,1,2,1] 表示的高度图，在这种情况下，可以接 6 个单位的雨水（蓝色部分表示雨水）。
+
+**动态规划方法**
+
+找到当前位置左右比两边最大的高度，然后用小的一个高度减当前高度就是当前位置能接到的雨水量
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    //动态规划方法
+    let n = height.length;
+    let leftMax = new Array(n);
+    let rightMax = new Array(n);
+
+    leftMax[0] = height[0];
+    rightMax[n - 1] = height[n - 1];
+
+    for (let i = 1; i < n; i++) {
+        leftMax[i] = Math.max(leftMax[i - 1], height[i]);
+        rightMax[n - 1 - i] = Math.max(rightMax[n - i], height[n - 1 - i]);
+    }
+
+    let ans = 0;
+    for (let i = 0; i < n; i++) {
+        ans += Math.min(leftMax[i], rightMax[i]) - height[i];
+    }
+    return ans;
+};
+
+let height = [0,1,0,2,1,0,1,3,2,1,2,1];
+console.log(trap(height));
+```
+
+
+
+
+
+
+
+
+
+----
+
 ## 53. 最大子数组和
 
 给你一个整数数组 nums ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
@@ -13538,6 +13592,80 @@ console.log(result);
 ```
 
 ---
+
+## 593. 有效的正方形
+
+给定2D空间中四个点的坐标 p1, p2, p3 和 p4，如果这四个点构成一个正方形，则返回 true 。
+
+点的坐标 pi 表示为 [xi, yi] 。输入 不是 按任何顺序给出的。
+
+一个 有效的正方形 有四条等边和四个等角(90度角)。
+
+```js
+/**
+ * @param {number[]} p1
+ * @param {number[]} p2
+ * @param {number[]} p3
+ * @param {number[]} p4
+ * @return {boolean}
+ */
+var validSquare = function(p1, p2, p3, p4) {
+    if (isSamePoint(p1, p2)) {
+        return false;
+    }
+    if (isSquare(p1, p2, p3, p4)) {
+        return true;
+    }
+    if (isSamePoint(p1, p3)) {
+        return false;
+    }
+    if (isSquare(p1, p3, p2, p4)) {
+        return true;
+    }
+    if (isSamePoint(p1, p4)) {
+        return false;
+    }
+    if (isSquare(p1, p4, p2, p3)) {
+        return true;
+    }
+    return false;
+};
+
+var isSamePoint = (point1, point2) => {
+    if (point1[0] === point2[0] && point1[1] === point2[1]) {
+        return true;
+    }
+    return false;
+};
+
+var isSquare = (p1, p2, p3, p4) => {
+    const v1 = [p1[0] - p2[0], p1[1] - p2[1]];
+    const v2 = [p3[0] - p4[0], p3[1] - p4[1]];
+    if (checkMidPoint(p1, p2, p3, p4) && checkLength(v1, v2) && calCos(v1, v2)) {
+        return true;
+    }
+    return false
+}
+
+var checkLength = (v1, v2) => {
+    return (v1[0] * v1[0] + v1[1] * v1[1]) === (v2[0] * v2[0] +v2[1] * v2[1]);
+}
+
+var checkMidPoint = (p1, p2, p3, p4) => {
+    return (p1[0] + p2[0]) === (p3[0] + p4[0]) && (p1[1] + p2[1]) === (p3[1] + p4[1]);
+}
+
+var calCos = (v1, v2) =>{
+    return (v1[0] * v2[0] + v1[1] * v2[1]) === 0;
+}
+
+let p1 = [0,0], p2 = [1,1], p3 = [1,0], p4 = [0,1];
+console.log(validSquare(p1, p2, p3, p4));
+```
+
+
+
+----
 
 ## 594. 最长和谐子序列
 
