--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2677,9 +2677,67 @@ let height = [0,1,0,2,1,0,1,3,2,1,2,1];
 console.log(trap(height));
 ```
 
+**单调栈**
 
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    let ans = 0;
+    const stack = [];  // 单调栈存储索引
+    const n = height.length;
 
+    for (let i = 0; i < n; i++) {
+        while (stack.length && height[i] > height[stack[stack.length - 1]]) {
+            const top = stack.pop();
+            if (!stack.length) {
+                break;
+            }
+            const left = stack[stack.length - 1];
+            const currWidth = i - left - 1;
+            const currHeight = Math.min(height[left], height[i]) - height[top];
+            ans += currWidth * currHeight;
+        }
+        stack.push(i);
+    }
+    return ans;
+};
 
+let height = [0,1,0,2,1,0,1,3,2,1,2,1];
+console.log(trap(height));
+```
+
+**双指针**
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+var trap = function(height) {
+    let ans = 0;
+    let left = 0, right = height.length - 1;
+    let leftMax = 0, rightMax = 0;
+
+    while (left < right) {
+        leftMax = Math.max(leftMax, height[left]);
+        rightMax = Math.max(rightMax, height[right]);
+        if (height[left] < height[right]) {
+            ans += leftMax - height[left];
+            left++;
+        } else {
+            ans += rightMax - height[right];
+            right--;
+        }
+    }
+    return ans;
+};
+
+let height = [0,1,0,2,1,0,1,3,2,1,2,1];
+console.log(trap(height));
+```
 
 
 
@@ -13862,10 +13920,30 @@ where num >=5;
 
 ---
 
+## 598. 范围求和 II
 
+给你一个 m x n 的矩阵 M ，初始化时所有的 0 和一个操作数组 op ，其中 ops[i] = [ai, bi] 意味着当所有的 0 <= x < ai 和 0 <= y < bi 时， M[x][y] 应该加 1。
 
-```
+在 执行完所有操作后 ，计算并返回 矩阵中最大整数的个数 。
 
+```js
+/**
+ * @param {number} m
+ * @param {number} n
+ * @param {number[][]} ops
+ * @return {number}
+ */
+var maxCount = function(m, n, ops) {
+    let mina = m, minb = n;
+    for (const op of ops) {
+        mina = Math.min(mina, op[0]);
+        minb = Math.min(minb, op[1]);
+    }
+    return mina * minb;
+};
+
+let m = 3, n = 3, ops = [[2,2],[3,3]];
+console.log(maxCount(m, n, ops));
 ```
 
 
@@ -17491,6 +17569,78 @@ console.log(result);
 ```
 
 ---
+
+## 952.按公因数计算最大组件大小
+
+给定一个由不同正整数的组成的非空数组 nums ，考虑下面的图：
+
+有 nums.length 个节点，按从 nums[0] 到 nums[nums.length - 1] 标记；
+只有当 nums[i] 和 nums[j] 共用一个大于 1 的公因数时，nums[i] 和 nums[j]之间才有一条边。
+返回 图中最大连通组件的大小 。
+
+**并查集**
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var largestComponentSize = function(nums) {
+    const m = Math.max(...nums);
+    const uf = new UnionFind(m + 1);
+    for (const num of nums) {
+        for (let i = 2; i * i <= num; i++) {
+            if (num % i === 0) {
+                uf.union(num, i);
+                uf.union(num, Math.floor(num / i));
+            }
+        }
+    }
+    const counts = new Array(m + 1).fill(0);
+    let ans = 0;
+    for (let num of nums) {
+        const root = uf.find(num);
+        counts[root]++;
+        ans = Math.max(ans, counts[root]);
+    }
+    return ans;
+};
+
+
+class UnionFind {
+    constructor(n) {
+        this.parent = new Array(n).fill(0).map((_, i) => i);
+        this.rank = new Array(n).fill(0);
+    }
+    union(x, y) {
+        let rootx = this.find(x);
+        let rooty = this.find(y);
+        if (rootx !== rooty) {
+            if (this.rank[rootx] > this.rank[rooty]) {
+                this.parent[rooty] = rootx;
+            } else if (this.rank[rootx] < this.rank[rooty]) {
+                this.parent[rootx] = rooty;
+            } else {
+                this.parent[rooty] = rootx;
+                this.rank[rootx]++;
+            }
+        }
+    }
+    find(x) {
+        if (this.parent[x] !== x) {
+            this.parent[x] = this.find(this.parent[x]);
+        }
+        return this.parent[x];
+    }
+}
+
+let nums = [4,6,15,35];
+console.log(largestComponentSize(nums));
+```
+
+
+
+----
 
 ## 953. 验证外星语词典
 
