--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18769,6 +18769,58 @@ console.log(result);
 
 ----
 
+## 1161. 最大层内元素和
+
+给你一个二叉树的根节点 root。设根节点位于二叉树的第 1 层，而根节点的子节点位于第 2 层，依此类推。
+
+请返回层内元素之和 最大 的那几层（可能只有一层）的层号，并返回其中 最小 的那个。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var maxLevelSum = function(root) {
+    let ans = 1;
+    let maxSum = root.val;
+    let arr = [root];
+    let deep = 0;
+    while (arr.length) {
+        let len = arr.length;
+        let sum = 0;
+        while(len > 0) {
+            let node = arr.shift();
+            if (node.left !== null) {
+                arr.push(node.left);
+            }
+            if (node.right !== null) {
+                arr.push(node.right);
+            }
+            len--;
+            sum += node.val;
+        }
+        deep++;
+        if (sum > maxSum) {
+            ans = deep;
+            maxSum = sum;
+        }
+    }
+    return ans;
+};
+```
+
+
+
+----
+
 ## 1175. 质数排列
 
 请你帮忙给从 1 到 n 的数设计排列方案，使得所有的「质数」都应该被放在「质数索引」（索引从 1 开始）上；你需要返回可能的方案总数。
