--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2589,10 +2589,10 @@ var searchInsert = function(nums, target) {
         if (nums[middle]<target) {
             left=middle+1;
             middle=Math.floor((right+left)/2);
-        }else if (nums[middle]>target) {
+        } else if (nums[middle]>target) {
             right=middle-1;
             middle=Math.floor((right+left)/2);
-        }else{
+        } else {
             return middle;
         }
         //console.log(left,right,middle);
@@ -14005,6 +14005,51 @@ console.log(result);
 
 
 ---
+## 605. 种花问题
+
+假设有一个很长的花坛，一部分地块种植了花，另一部分却没有。可是，花不能种植在相邻的地块上，它们会争夺水源，两者都会死去。
+
+给你一个整数数组  flowerbed 表示花坛，由若干 0 和 1 组成，其中 0 表示没种植花，1 表示种植了花。另有一个数 n ，能否在不打破种植规则的情况下种入 n 朵花？能则返回 true ，不能则返回 false。
+
+```js
+/**
+ * @param {number[]} flowerbed
+ * @param {number} n
+ * @return {boolean}
+ */
+var canPlaceFlowers = function(flowerbed, n) {
+    let count = 0;
+    const m = flowerbed.length;
+    let prev = -1;
+    for (let i = 0; i < m; i++) {
+        if (flowerbed[i] === 1) {
+            if (prev < 0) {
+                count += Math.floor(i / 2);
+            } else {
+                count += Math.floor((i - prev - 2) / 2);
+            }
+            if (count >= n) {
+                return true;
+            }
+            prev = i;
+        }
+    }
+    if (prev < 0) {
+        count += (m + 1) / 2;
+    } else {
+        count += (m - prev - 1) / 2;
+    }
+    return count >= n;
+};
+
+let flowerbed = [1,0,0,0,1], n = 1;
+console.log(canPlaceFlowers(flowerbed, n));
+```
+
+
+
+----
+
 ## 606. 根据二叉树创建字符串
 
 你需要采用前序遍历的方式，将一个二叉树转换成一个由括号和整数组成的字符串。
@@ -19334,6 +19379,43 @@ var getAllElements = function(root1, root2) {
 
 
 ---
+## 1374. 生成每种字符都是奇数个的字符串
+
+给你一个整数 n，请你返回一个含 n 个字符的字符串，其中每种字符在该字符串中都恰好出现 奇数次 。
+
+返回的字符串必须只含小写英文字母。如果存在多个满足题目要求的字符串，则返回其中任意一个即可。
+
+```js
+/**
+ * @param {number} n
+ * @return {string}
+ */
+var generateTheString = function(n) {
+    let ans = new Array(n).fill("a");
+    if (n % 2 === 0) {
+        ans[0] = "b";
+    }
+    return ans.join("");
+};
+
+console.log(generateTheString(6));
+```
+
+```javascript
+var generateTheString = function(n) {
+    const sb = '';
+    if (n % 2 === 1) {
+        return sb + 'a'.repeat(n);;
+    }
+    return sb + 'a'.repeat(n - 1) + 'b';
+};
+
+```
+
+
+
+----
+
 ## 1380. 矩阵中的幸运数
 
 给你一个 m * n 的矩阵，矩阵中的数字 各不相同 。请你按 任意 顺序返回矩阵中的所有幸运数。
