--- a/面试学习题目/前端面试_11_工程化部分.md
+++ b/面试学习题目/前端面试_11_工程化部分.md
@@ -1,12 +1,131 @@
+----
+
+##  谈谈你对 Webpack的认识
+
+WebPack是一个模块打包工具，可以使用 WebPack管理模块依赖，并编译输岀模块所需的静态文件。它能够很好地管理与打包Web开发中所用到的HTML、 JavaScript 、CSS以及各种静态文件（图片、字体等），让开发过程更加高效。对于不同类型的资源， WebPack有对应的模块加载器。WebPack模块打包器会分析模块间的依赖关系，最后生成优化且合并后的静态资源。
+
+WebPack的两大特色如下。
+
+（1）代码切割（ code splitting）
+
+（2） loader可以处理各种类型的静态文件，并且支持串行操作WebPack以 CommonJS规范来书写代码，但对 AMD/CMD的支持也很全面，方便对项目进行代码迁移。
+
+WebPack具有 require.js和 browserify的功能，但也有很多自己的新特性，
+
+（1）对 CommonJS、AMD、ES6的语法实现了兼容。
+
+（2）对 JavaScript、CSS、图片等资源文件都支持打包
+
+（3）串联式模块加载器和插件机制，让其具有更好的灵活性和扩展性，例如提供对CoffeeScript、 EMAScript 6的支持
+
+（4）有独立的配置文件 webpack.config. js。
+
+（5）可以将代码切割成不同的块，实现按需加载，缩短了初始化时间。
+
+（6）支持 SourceUrls和 SourceMaps，易于调试。
+
+（7）具有强大的 Plugin接口，大多是内部插件，使用起来比较灵活
+
+（8）使用异步I/O，并具有多级缓存，这使得 WebPack速度很快且在增量编译上更加快。
+
+
+
+----
+
+## Webpack中 loader的作用是什么，以及常用loader有哪些
+
+**loader作用**：
+
+（1）实现对不同格式文件的处理，比如将Scss转换为CSS，或将 TypeScript转化为Javascript。
+
+（2）可以编译文件，从而使其能够添加到依赖关系中。loader是 WebPack最重要的部分之一。通过使用不同的 loader，我们能够调用外部的脚本或者工具，实现对不同格式文件的处理。loader需要在 webpack.config.js里单独用 module进行配置。
+
+**常用的 loader如下**：
+
+file-loader：把文件输出到一个文件夹中，在代码中通过相对 URL 去引用输出的文件
+url-loader：和 file-loader 类似，但是能在文件很小的情况下以 base64 的方式把文件内容注入到代码中去
+source-map-loader：加载额外的 Source Map 文件，以方便断点调试
+image-loader：加载并且压缩图片文件
+babel-loader：把 ES6 转换成 ES5
+css-loader：加载 CSS，支持模块化、压缩、文件导入等特性
+style-loader：把 CSS 代码注入到 JavaScript 中，通过 DOM 操作去加载 CSS。
+eslint-loader：通过 ESLint 检查 JavaScript 代码
+
 
 
 ---
 
 ## webpack的loader与plugin区别
 
-webpack loader是用来加载文件的，webpack plugin是用来扩展功能的。
+webpack loader是用来**加载文件**的，webpack plugin是用来**扩展功能**的。
 
 loader主要是用来加载一个个文件的，比如它可以加载js文件并把js文件转译成低版本浏览器可以支持的js文件；也可以用来加载css文件，可以把css文件变成页面上的style标签；还可以加载图片文件，可以对文件进行优化。
 
 plugin是用来加强webpack功能的，比如**HTML webpack plugin**是用来生成一个html文件的；再比如**mini css extract plugin**是用来抽取css代码并把它变成一个css文件的。
 
+**不同的作用:**
+
+- **Loader**直译为"加载器"。Webpack将一切文件视为模块，但是webpack原生是只能解析js文件，如果想将其他文件也打包的话，就会用到`loader`。 所以Loader的作用是让webpack拥有了加载和解析*非JavaScript文件*的能力。
+- **Plugin**直译为"插件"。Plugin可以扩展webpack的功能，让webpack具有更多的灵活性。 在 Webpack 运行的生命周期中会广播出许多事件，Plugin 可以监听这些事件，在合适的时机通过 Webpack 提供的 API 改变输出结果。
+
+**不同的用法:**
+
+- **Loader**在`module.rules`中配置，也就是说他作为模块的解析规则而存在。 类型为数组，每一项都是一个`Object`，里面描述了对于什么类型的文件（`test`），使用什么加载(`loader`)和使用的参数（`options`）
+- **Plugin**在`plugins`中单独配置。 类型为数组，每一项是一个`plugin`的实例，参数都通过构造函数传入。
+
+
+
+---
+
+## webpack、rollup、parcel优劣
+
+- webpack适用于**大型复杂的前端站点构建**: webpack有强大的loader和插件生态,打包后的文件实际上就是一个立即执行函数，这个立即执行函数接收一个参数，这个参数是模块对象，键为各个模块的路径，值为模块内容。立即执行函数内部则处理模块之间的引用，执行模块等,这种情况更适合文件依赖复杂的应用开发.
+- rollup适用于**基础库**的打包，如vue、d3等: Rollup 就是将各个模块打包进一个文件中，并且通过 Tree-shaking 来删除无用的代码,可以最大程度上降低代码体积,但是rollup没有webpack如此多的的如代码分割、按需加载等高级功能，其更聚焦于库的打包，因此更适合库的开发.
+- parcel适用于**简单的实验性项目**: 他可以满足低门槛的快速看到效果,但是生态差、报错信息不够全面都是他的硬伤，除了一些玩具项目或者实验项目不建议使用
+
+
+
+----
+
+## webpack有哪些常见的Plugin
+
+- define-plugin：定义环境变量
+- html-webpack-plugin：简化html文件创建
+- uglifyjs-webpack-plugin：通过`UglifyES`压缩`ES6`代码
+- webpack-parallel-uglify-plugin: 多核压缩,提高压缩速度
+- webpack-bundle-analyzer: 可视化webpack输出文件的体积
+- mini-css-extract-plugin: CSS提取到单独的文件中,支持按需加载
+
+
+
+----
+
+## webpack的构建流程是什么
+
+Webpack 的运行流程是一个串行的过程，从启动到结束会依次执行以下流程：
+
+1. 初始化参数：从配置文件和 Shell 语句中读取与合并参数，得出最终的参数；
+2. 开始编译：用上一步得到的参数初始化 Compiler 对象，加载所有配置的插件，执行对象的 run 方法开始执行编译；
+3. 确定入口：根据配置中的 entry 找出所有的入口文件；
+4. 编译模块：从入口文件出发，调用所有配置的 Loader 对模块进行翻译，再找出该模块依赖的模块，再递归本步骤直到所有入口依赖的文件都经过了本步骤的处理；
+5. 完成模块编译：在经过第4步使用 Loader 翻译完所有模块后，得到了每个模块被翻译后的最终内容以及它们之间的依赖关系；
+6. 输出资源：根据入口和模块之间的依赖关系，组装成一个个包含多个模块的 Chunk，再把每个 Chunk 转换成一个单独的文件加入到输出列表，这步是可以修改输出内容的最后机会；
+7. 输出完成：在确定好输出内容后，根据配置确定输出的路径和文件名，把文件内容写入到文件系统。
+
+
+
+----
+
+## 如何用webpack来优化前端性能
+
+用webpack优化前端性能是指优化webpack的输出结果，让打包的最终结果在浏览器运行快速高效。
+
+- 压缩代码:删除多余的代码、注释、简化代码的写法等等方式。可以利用webpack的`UglifyJsPlugin`和`ParallelUglifyPlugin`来压缩JS文件， 利用`cssnano`（css-loader?minimize）来压缩css
+- 利用CDN加速: 在构建过程中，将引用的静态资源路径修改为CDN上对应的路径。可以利用webpack对于`output`参数和各loader的`publicPath`参数来修改资源路径
+- Tree Shaking: 将代码中永远不会走到的片段删除掉。可以通过在启动webpack时追加参数`--optimize-minimize`来实现
+- Code Splitting: 将代码按路由维度或者组件分块(chunk),这样做到按需加载,同时可以充分利用浏览器缓存
+- 提取公共第三方库: SplitChunksPlugin插件来进行公共模块抽取,利用浏览器缓存可以长期缓存这些无需频繁变动的公共代码
+
+
+
+----
