--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -17064,6 +17064,39 @@ const match = (word, pattern) => {
 
 
 
+----
+
+## 899.有序队列
+
+给定一个字符串 s 和一个整数 k 。你可以从 s 的前 k 个字母中选择一个，并把它加到字符串的末尾。
+
+返回 在应用上述步骤的任意数量的移动后，字典上最小的字符串 。
+
+```js
+/**
+ * @param {string} s
+ * @param {number} k
+ * @return {string}
+ */
+var orderlyQueue = function(s, k) {
+    if (k === 1) {
+        let ans = s;
+        for (let i = 0; i < s.length - 1; ++i) {
+            const n = s.length;
+            s = s.substring(1, n) + s[0];
+            ans = ans < s ? ans : s;
+        }
+        return ans;
+    }
+    return [...s].sort().join("");
+};
+
+let s =  "baaca", k = 3;
+console.log(orderlyQueue(s, k));
+```
+
+
+
 ---
 
 ## 905. 按奇偶排序数组
