--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19607,6 +19607,50 @@ console.log(result);
 
 
 ---
+## 1403. 非递增顺序的最小子序列
+
+给你一个数组 nums，请你从中抽取一个子序列，满足该子序列的元素之和 严格 大于未包含在该子序列中的各元素之和。
+
+如果存在多个解决方案，只需返回 长度最小 的子序列。如果仍然有多个解决方案，则返回 元素之和最大 的子序列。
+
+与子数组不同的地方在于，「数组的子序列」不强调元素在原数组中的连续性，也就是说，它可以通过从数组中分离一些（也可能不分离）元素得到。
+
+注意，题目数据保证满足所有约束条件的解决方案是 唯一 的。同时，返回的答案应当按 非递增顺序 排列。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var minSubsequence = function(nums) {
+    nums.sort((a, b) => a - b);
+    let sumLeft = 0;
+    nums.forEach(item => {
+        sumLeft += item;
+    });
+    let sumRight = 0;
+    const ans = [];
+    const n = nums.length;
+    for (let i = 0; i < n; i++) {
+        let top = nums.pop();
+        ans.push(top);
+        sumRight += top;
+        sumLeft -= top;
+        if (sumRight > sumLeft) {
+            return ans;
+        }
+    }
+    return ans;
+};
+
+let nums = [8,8];
+console.log(minSubsequence(nums));
+```
+
+
+
+----
+
 ## 1405. 最长快乐字符串
 
 如果字符串中不含有任何 'aaa'，'bbb' 或 'ccc' 这样的字符串作为子串，那么该字符串就是一个「快乐字符串」。
