--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19814,6 +19814,38 @@ console.log(result);
 
 
 ---
+## 1408. 数组中的字符串匹配
+
+给你一个字符串数组 words ，数组中的每个字符串都可以看作是一个单词。请你按 任意 顺序返回 words 中是其他单词的子字符串的所有单词。
+
+如果你可以删除 words[j] 最左侧和/或最右侧的若干字符得到 word[i] ，那么字符串 words[i] 就是 words[j] 的一个子字符串。
+
+
+
+```js
+/**
+ * @param {string[]} words
+ * @return {string[]}
+ */
+var stringMatching = function(words) {
+    const ans = [];
+    let wordsString = words.join("_")
+    for (let word of words) {
+        if (wordsString.indexOf(word) !== wordsString.lastIndexOf(word)) {
+            ans.push(word);
+        }
+    }
+    return ans;
+};
+
+let words = ["mass","as","hero","superhero"];
+console.log(stringMatching(words));
+```
+
+
+
+---
+
 ## 1447. 最简分数
 
 给你一个整数 n ，请你返回所有 0 到 1 之间（不包括 0 和 1）满足分母小于等于  n 的 最简 分数 。分数可以以 任意 顺序返回。
