--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -16005,6 +16005,50 @@ console.log(result);
 
 
 ---
+#### 761. 特殊的二进制序列
+
+特殊的二进制序列是具有以下两个性质的二进制序列：
+
+0 的数量与 1 的数量相等。
+二进制序列的每一个前缀码中 1 的数量要大于等于 0 的数量。
+给定一个特殊的二进制序列 S，以字符串形式表示。定义一个操作 为首先选择 S 的两个连续且非空的特殊的子串，然后将它们交换。（两个子串为连续的当且仅当第一个子串的最后一个字符恰好为第二个子串的第一个字符的前一个字符。)
+
+在任意次数的操作之后，交换后的字符串按照字典序排列的最大的结果是什么？
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var makeLargestSpecial = function(s) {
+    if (s.length <= 2) {
+        return s;
+    }
+    let cnt = 0, left = 0;
+    const subs = [];
+    for (let i = 0; i < s.length; i++) {
+        if (s[i] === "1") {
+            cnt++;
+        } else {
+            cnt--;
+            if (cnt === 0) {
+                subs.push("1" + makeLargestSpecial(s.substring(left + 1, i)) + "0");
+                left = i + 1;
+            }
+        }
+    }
+    subs.sort().reverse();
+    return subs.join("");
+};
+
+let S = "11011000";
+console.log(makeLargestSpecial(S));
+```
+
+
+
+----
+
 ## 762.二进制表示中质数个计算置位
 
 给你两个整数 left 和 right ，在闭区间 [left, right] 范围内，统计并返回 计算置位位数为质数 的整数个数。
