--- a/image/记录/前端笔试学习题目.md
+++ b/image/记录/前端笔试学习题目.md
@@ -4,7 +4,7 @@
 
 ------
 
-### 多多的数字组合
+### 数字组合
 
 多多君最近在研究某种数字组合：
 定义为：每个数字的十进制表示中(0~9)，每个数位**各不相同**且各个数位之和等于N。
@@ -49,7 +49,7 @@ console.log(solution(N));
 
 ---
 
-### 多多的字符变换
+### 字符变换
 
 多多君最近在研究字符串之间的变换，可以对字符串进行若干次变换操作:
 
@@ -98,7 +98,7 @@ console.log(solution(X, Y, N));
 
 ---
 
-### 多多的求和计算
+### 求和计算
 
 多多路上从左到右有N棵树（编号1～N），其中第i个颗树有和谐值Ai。
 
@@ -169,7 +169,7 @@ console.log(solution(nums, N, M));
 
 ---
 
-### 多多的骰子组合
+### 骰子组合
 
 多多君拼团购买了N个骰子，为了方便后面进行活动，多多君需要将这些骰子进行分类。
 
@@ -288,7 +288,7 @@ solution(nums);
 
 ---
 
-### 多多的魔术盒子
+### 魔术盒子
 
 多多鸡有N个魔术盒子（编号1～N），其中编号为i的盒子里有i个球。
 多多鸡让皮皮虾每次选择一个数字X（1 <= X <= N），多多鸡就会**把球数量大于等于X个的盒子里的球减少X个**。
@@ -363,7 +363,7 @@ solution(nums, N);
 
 ---
 
-### 多多的排列函数
+### 排列函数
 
 数列 {An} 为N的一种排列。
 
@@ -471,7 +471,7 @@ solution(nums, N);
 
 ---
 
-### 多多的电子字典
+### 电子字典
 
 多多鸡打算造一本自己的电子字典，里面的所有单词都只由a和b组成。
 每个单词的组成里a的数量不能超过N个且b的数量不能超过M个。
