--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -19940,6 +19940,43 @@ console.log(stringMatching(words));
 
 
 
+----
+
+## 1413. 逐步求和得到正数的最小值
+
+给你一个整数数组 nums 。你可以选定任意的 正数 startValue 作为初始值。
+
+你需要从左到右遍历 nums 数组，并将 startValue 依次累加上 nums 数组中的值。
+
+请你在确保累加和始终大于等于 1 的前提下，选出一个最小的 正数 作为 startValue 。
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var minStartValue = function(nums) {
+    let ans = 1;
+    let sum = 1;
+    for (let item of nums) {
+        sum += item;
+        if (sum < 1) {
+            ans += 1 - sum;
+            sum = 1;
+        }
+    }
+    return ans;
+
+};
+
+let nums = [-3,2,-3,4,2];
+console.log(minStartValue(nums));
+```
+
+
+
 ---
 
 ## 1447. 最简分数
