--- a/数据结构与算法/数据结构.md
+++ b/数据结构与算法/数据结构.md
@@ -183,3 +183,93 @@ trie树在这里的应用类似哈夫曼树，
 trie树常用于搜索提示。如当输入一个网址，可以自动搜索出可能的选择。当没有完全匹配的搜索结果，可以返回前缀最相似的可能。
 Trie树检索的时间复杂度可以做到n，n是要检索单词的长度，
 如果使用暴力检索，需要指数级O(N2)的时间复杂度。
+
+
+
+
+
+
+
+----
+
+# 堆
+
+堆（Heap）是一种特殊的二叉树：
+
+1. 堆是一个完全二叉树
+2. 堆中每一个节点的值都必须大于等于（或小于等于）其子树中的每个节点的值
+
+## 分类
+
+堆分为两种：`大顶堆` 和 `小顶堆` 。
+
+- 大顶堆：父顶点的值大于所有子顶点的值。
+- 小顶堆：父顶点的值小于所有子顶点的值。
+
+大顶堆：
+![img](https://img.kancloud.cn/bc/58/bc585c066f684abfc06cbd52c0c23199_410x304.png)
+
+小顶堆：
+![img](https://img.kancloud.cn/92/ca/92caa577acc264a09aaf7b9b2eebb6b1_900x458.png)
+
+## 存储
+
+堆是一种二叉树，有两种存储方式：
+
+- 数组
+- 链表
+
+堆是一种完全二叉树，**而完全二叉树使用 `数组` 存储比较合适**。
+
+![img](https://img.kancloud.cn/36/7c/367c25251bdf4400bc285f53280b1b6e_1166x814.png)
+
+当以数组保存二叉树时有以下几个重要公式。
+
+1. 对于下标为 i 节点（子节点）
+   左子节点下标：2i+1
+   右子节点下标：2i+2
+2. 对于下标为 i 的节点（父节点）
+   父节点下标：Math.floor( (i-1) / 2 )
+3. 最后一个非叶子节点的节点的下标
+   Math.floor(len/2) - 1
+
+## 应用场景
+
+1. 排序 ---》 堆排序（时间复杂度：O(nlogn)
+2. 优先队列（优先级高的放到前面）
+
+## 操作
+
+二叉堆的操作有三种：
+
+- 插入节点
+- 删除节点
+- 构建二叉堆
+
+### 插入节点
+
+当向二叉堆中插入新节点时的操作：
+
+1. 将新节点先放到 `最后`
+2. 然后依次和父节点比较，然后 `上浮`
+
+### 删除节点
+
+删除节点时，一般就是删除堆是根节点，过程和插入节点正好相反：
+
+1. 删除顶节点
+2. 将最后一个节点拿到父节点
+3. 和子节点比较并 `下沉`
+
+### 构建二叉堆
+
+排序从最后一个 `非叶子节点 Math.floor(数组长度/2)-1` 开始比较并 （大/小）上浮。
+
+
+
+## 代码实现小顶堆
+
+```
+
+```
+
