--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -14469,6 +14469,67 @@ console.log(exclusiveTime(n, logs));
 
 
 ---
+## 640. 求解方程
+
+求解一个给定的方程，将x以字符串 "x=#value" 的形式返回。该方程仅包含 '+' ， '-' 操作，变量 x 和其对应系数。
+
+如果方程没有解，请返回 "No solution" 。如果方程有无限解，则返回 “Infinite solutions” 。
+
+题目保证，如果方程中只有一个解，则 'x' 的值是一个整数。
+
+```js
+var solveEquation = function(equation) {
+    let factor = 0, val = 0;
+    let index = 0, n = equation.length, sign1 = 1; // 等式左边默认系数为正
+    while (index < n) {
+        if (equation[index] === '=') {
+            sign1 = -1; // 等式右边默认系数为负
+            index++;
+            continue;
+        }
+
+        let sign2 = sign1, number = 0;
+        let valid = false; // 记录 number 是否有效
+        if (equation[index] === '-' || equation[index] === '+') { 
+            // 去掉前面的符号
+            sign2 = (equation[index] === '-') ? -sign1 : sign1;
+            index++;
+        }
+        while (index < n && isDigit(equation[index])) {
+            number = number * 10 + (equation[index].charCodeAt() - '0'.charCodeAt());
+            index++;
+            valid = true;
+        }
+
+        if (index < n && equation[index] === 'x') { 
+            // 变量
+            factor += valid ? sign2 * number : sign2;
+            index++;
+        } else { 
+            // 数值
+            val += sign2 * number;
+        }
+    }
+
+    if (factor === 0) {
+        return val === 0 ? "Infinite solutions" : "No solution";
+    }
+    return "x=" + (-val / factor);
+};
+
+const isDigit = (ch) => {
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+
+let equation = "x+5-3+x=6+x-2";
+console.log(solveEquation(equation));
+```
+
+
+
+----
+
 ## 648. 单词替换
 
 在英语中，我们有一个叫做 词根(root) 的概念，可以词根后面添加其他一些词组成另一个较长的单词——我们称这个词为 继承词(successor)。例如，词根an，跟随着单词 other(其他)，可以形成新的单词 another(另一个)。
@@ -16005,7 +16066,7 @@ console.log(result);
 
 
 ---
-#### 761. 特殊的二进制序列
+## 761. 特殊的二进制序列
 
 特殊的二进制序列是具有以下两个性质的二进制序列：
 
