--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -20038,6 +20038,64 @@ console.log(minStartValue(nums));
 
 
 
+----
+
+## 1417. 重新格式化字符串
+
+给你一个混合了数字和字母的字符串 s，其中的字母均为小写英文字母。
+
+请你将该字符串重新格式化，使得任意两个相邻字符的类型都不同。也就是说，字母后面应该跟着数字，而数字后面应该跟着字母。
+
+请你返回 重新格式化后 的字符串；如果无法按要求重新格式化，则返回一个 空字符串 。
+
+**提示：**
+
+- `1 <= s.length <= 500`
+- `s` 仅由小写英文字母和/或数字组成。
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var reformat = function(s) {
+    let sumDigit = 0;
+    let n = s.length;
+    for (let i = 0; i < n; i++) {
+        if (isDigit(s[i])) {
+            sumDigit++;
+        }
+    }
+    let sumAlpha = n - sumDigit;
+
+    if (Math.abs(sumDigit - sumAlpha) > 1) {
+        return "";
+    }
+
+    let flag = sumDigit > sumAlpha;
+
+    const arr = [...s];
+    for (let i = 0, j = 1; i < n; i += 2) {
+        if (isDigit(arr[i]) !== flag) {
+            while (isDigit(arr[j]) !== flag) {
+                j += 2;
+            }
+            [arr[i], arr[j]] = [arr[j], arr[i]];
+        }
+    }
+    return arr.join("");
+};
+
+const isDigit = (ch) =>{
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+let s = "covid2019";
+console.log(reformat(s));
+```
+
+
+
 ---
 
 ## 1447. 最简分数
