--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -174,6 +174,40 @@ let result=lengthOfLongestSubstring(str1);
 console.log(result);
 ```
 
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLongestSubstring = function(s) {
+    if (s.length === 0) {
+        return 0;
+    }
+
+    let curLen = 0;  // 局部最长不重复
+    let ans = 0;  //  全局最长不重复
+    const position = new Map();
+    let n = s.length;
+    for (let i = 0; i < n; i++) {
+        let preIndex = position.has(s[i]) ? position.get(s[i]) : -1;
+
+        if (preIndex < 0 || i - preIndex > curLen) {
+            curLen++;
+        } else {
+            ans = Math.max(ans, curLen);
+            curLen = i - preIndex;  // 保持不重复
+        }
+        position.set(s[i], i);
+    }
+    ans = Math.max(ans, curLen);
+
+    return ans;
+};
+
+let s = "abcabcbb";
+console.log(lengthOfLongestSubstring(s));
+```
+
 
 
 
@@ -19670,6 +19704,53 @@ var oddCells = function(m, n, indices) {
     return oddx * (n - oddy) + (m - oddx) * oddy;
 };
 
+```
+
+
+
+----
+
+## 1282. 用户分组
+
+有 n 个人被分成数量未知的组。每个人都被标记为一个从 0 到 n - 1 的唯一ID 。
+
+给定一个整数数组 groupSizes ，其中 groupSizes[i] 是第 i 个人所在的组的大小。例如，如果 groupSizes[1] = 3 ，则第 1 个人必须位于大小为 3 的组中。
+
+返回一个组列表，使每个人 i 都在一个大小为 groupSizes[i] 的组中。
+
+每个人应该 恰好只 出现在 一个组 中，并且每个人必须在一个组中。如果有多个答案，返回其中 任何 一个。可以 保证 给定输入 至少有一个 有效的解。
+
+ **提示：**
+
+- `groupSizes.length == n`
+- `1 <= n <= 500`
+- `1 <= groupSizes[i] <= n`
+
+```js
+/**
+ * @param {number[]} groupSizes
+ * @return {number[][]}
+ */
+var groupThePeople = function(groupSizes) {
+    const ans = [];
+    const m = new Map();
+    const n = groupSizes.length;
+    for (let i = 0; i < n; i++) {
+        let item = groupSizes[i];
+        if (!m.has(item)) {
+            m.set(item, []);
+        }
+        m.get(item).push(i);
+        if (m.get(item).length === item) {
+            ans.push([...m.get(item)]);
+            m.delete(item);
+        }
+    }
+    return ans;
+};
+
+let groupSizes = [2,1,3,3,3,2];
+console.log(groupThePeople(groupSizes));
 ```
 
 
